tests/diag/wrong-kind-prop.expected
tests/diag/wrong-kind-prop.wisp:3:5: error: unknown widget property 'layer'
      layer = top;
      ^
  help: 'layer' is a surface property
