tests/diag/wrong-kind-prop.wisp
surface bar {
  widget clock {
    layer = top;
  }
}
